--- a/FootLand/templates/login.html
+++ b/FootLand/templates/login.html
@@ -104,7 +104,7 @@
                 alert('Successfully logged in!');
 
                 // Redirect to the user's home page
-                window.location.href = "{% url 'home' %}";
+                window.location.href = "{% url 'user_dashboard' %}";
             }
         });
     </script>
