--- a/FootLand/templates/view_customers.html
+++ b/FootLand/templates/view_customers.html
@@ -128,7 +128,7 @@
                 <a href="{% url 'view_customers' %}">Customers</a>
                 <a href="#">Category</a>
                 <a href="#">Sizes</a>
-                <a href="#">Product Sizes</a>
+                <a href="#">View Product </a>
                 <a href="#">Products</a>
                 <a href="#">Orders</a>
             </nav>
