--- a/FootLand/templates/search_results.html
+++ b/FootLand/templates/search_results.html
@@ -128,7 +128,7 @@
             <ul class="product-list">
                 {% for product in products %}
                     <li class="product-item">
-                        <a href="{% url 'product_detail' product.id %}">
+                        <a href="{% url 'product_list' product.id %}">
                             <img src="{{ product.image.url }}" alt="{{ product.name }}" class="product-image">
                             <div class="product-info">
                                 <h2>{{ product.name }}</h2>
