--- a/FootLand/templates/add_profile.html
+++ b/FootLand/templates/add_profile.html
@@ -106,7 +106,7 @@
 <div class="container">
     <!-- Side navigation -->
     <div class="sidebar">
-        <h3>Edit Profile</h3>
+        <h3> Profile</h3>
         <ul>
             
             <li><a href="{% url 'add_profile' %}">Profile</a></li>
