--- a/FootLand/templates/home.html
+++ b/FootLand/templates/home.html
@@ -60,9 +60,9 @@
                     <ul id="MenuItems">
                         <li><a href="{% url 'home' %}">Home</a></li>
                         
-                        <li><a href="{% url 'womens' %}">Womens</a></li>
-                        <li><a href="{% url 'mens' %}">Mens</a></li>
-                        <li><a href="{% url 'kids' %}">Kids</a></li>
+                        <li><a href="{% url 'womens_products' %}">Womens</a></li>
+                        <li><a href="{% url 'mens_products' %}">Mens</a></li>
+                        <li><a href="{% url 'kids_products' %}">Kids</a></li>
                         <li>
                             <form action="{% url 'search' %}" method="get">
                                 <input type="text" name="q" placeholder="Search..." class="search-input">
