--- a/FootLand/templates/kids_products.html
+++ b/FootLand/templates/kids_products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mens Products</title>
+    <title>Footland</title>
     <style>
         /* Basic CSS styles for the page */
         body {
@@ -72,7 +72,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin-right: 20px;
             position: fixed;
-            top: 60px; /* Adjust position to place below the navbar */
+            top: 75px; /* Adjust position to place below the navbar */
             left: -270px;
             height: 100%;
             transition: 0.3s;
@@ -276,7 +276,7 @@
             <h3>{{ product.name }}</h3>
             <p>Price: Rs. {{ product.price }}</p>
             <p>Brand: {{ product.brand }}</p>
-            <p>Stock: {{ product.stock_quantity }}</p>
+            <!--<p>Stock: {{ product.stock_quantity }}</p> stock display in product page--> 
             <div class="product-buttons">
                 <a href="#" class="add-to-cart">Add to Cart</a>
                 <a href="#" class="buy-now">Buy Now</a>
